Correct html tags in the body section, design the buttons, adjust the sizes of the images in the section1 section.

--- a/quick.html
+++ b/quick.html
@@ -38,7 +38,7 @@
 <div class="section1">
     <div class="images">
         <div class="bigimage">
-            <img src="assets/images/Property House.png" height="450" width="600">
+            <img src="assets/images/Property House.png" height="500" width="700">
         </div>
         <div class="smallimages">
             <img src="assets/images/Rectangle.png" height="100" width="100">
@@ -55,19 +55,19 @@
             <span id="icon"><img></span><span id="name">Kayley Hall</span><br /><span class="view">view profile</span>
         </div>
         <div id="namy">
-            <h6>name </h6>
+            <h6>Name </h6>
         </div>
         <div id="phone">
-            <h6>>Phone</h6>
+            <h6>Phone</h6>
         </div>
         <div id="email">
-            <h6>>Email</h6>
+            <h6>Email</h6>
         </div>
         <div id="hello">
             <h6>Hello, I am interested in...</h6>
         </div>
         <div>
-            <button id="btn2"><span id="word"> Learn more</span><span id="rightarrow"></span>&#8594</button>
+            <button id="btn2"><span id="word"> Learn more</span><span id="rightarrow">&#8594</span></button>
         </div>
     </div>
 </div>
