Link icon href to html document, create the details section, import icons from box icons to our html page.

--- a/quick.html
+++ b/quick.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Movers</title>
     <link rel="stylesheet" type="text/css" href="./assets/quick.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -20,7 +21,6 @@
             <li><span><button class="btn1">Work with us </span><span class="arrow">&#8594</span></button></li>
         </ul>
     </div>
-    <hr id="hr">
         <div class="down">
             <div>
                 <h3>Modern House</h3>
@@ -72,6 +72,25 @@
     </div>
 </div>
 </section>
+
+
+<!-- More details section-->
+<div class="details">
+    <div>
+        <h6>Details</h6>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td><i class='bx bxs-bed'></i>4</td>
+                <td><i class='bx bxs-bath' ></i>2</td>
+                <td><i class='bx bx-hash' ></i>2</td>
+                <td><i class='bx bxs-home-alt-2' ></i>1</td>
+                <td><i class='bx bxs-calendar-alt' ></i>2007</td>
+            </tr>
+        </table>
+    </div>
+</div>
 
 
     <!-- Footer-->
