Style the details section and reduce the padding of the formlike structure.

--- a/quick.html
+++ b/quick.html
@@ -76,17 +76,17 @@
 
 <!-- More details section-->
 <div class="details">
-    <div>
+    <div class="detailsa">
         <h6>Details</h6>
     </div>
-    <div>
+    <div class="detailsb">
         <table>
             <tr>
-                <td><i class='bx bxs-bed'></i>4</td>
-                <td><i class='bx bxs-bath' ></i>2</td>
-                <td><i class='bx bx-hash' ></i>2</td>
-                <td><i class='bx bxs-home-alt-2' ></i>1</td>
-                <td><i class='bx bxs-calendar-alt' ></i>2007</td>
+                <td class="tabule"><i class='bx bxs-bed'></i>4</td>
+                <td class="tabule"><i class='bx bxs-bath' ></i>2</td>
+                <td class="tabule"><i class='bx bx-hash' ></i>2</td>
+                <td class="tabule"><i class='bx bxs-home-alt-2' ></i>1</td>
+                <td class="tabule"><i class='bx bxs-calendar-alt' ></i>2007</td>
             </tr>
         </table>
     </div>
