--- a/quick.html
+++ b/quick.html
@@ -77,7 +77,7 @@
 <!-- More details section-->
 <div class="details">
     <div class="detailsa">
-        <h6>Details</h6>
+        <h4>Details</h4>
     </div>
     <div class="detailsb">
         <table>
@@ -90,6 +90,21 @@
             </tr>
         </table>
     </div>
+</div>
+<div class="description">
+    <h4>Description</h4>
+    <p>At vero et iusto odio dignissimos ducimus, qui haec putat,ut ipsi auctori huius disciplinae placet:<br />
+        constituam, quid sit numeranda naec me ab ilo inventore veritstis et expedita distinctio nam libero tempore,<br />
+        cum memoriter,tum etiam ac ratione.
+        </p>
+        <p>Si sine metu degendae praesidia firmissima filium morte multavit si sine causa? quae fuerit causa, mox <br />
+        videro; interea hoc tenebo, si ob rem vluptas assumenda est,quid sit extremum et inter mediocrem <br />
+        animadversionem atque natum sit, a natura incorrupte.
+        </p>
+        <p>Omne animal, simul atque in sanguinem suum tam inportuno tamque crudeli; sin,ut earum motus et <br />
+        accusarmus et argumentandum et dolore suo sanciret militaris imperii disciplinam exercitumque in liberos <br />
+        atque haec ratio late patet in quo pertineant non possim.
+        </p>
 </div>
 
 
