make changes to the header sections.

--- a/quick.html
+++ b/quick.html
@@ -34,6 +34,7 @@
 
 
     <!--main body-->
+<section class="mainbody">
 <section class="sectioning">
 <div class="section1">
     <div class="images">
@@ -106,10 +107,45 @@
         atque haec ratio late patet in quo pertineant non possim.
         </p>
 </div>
-<div>
-
+<div class="features">
+    <ul>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+    </ul>
+    <ul>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+    </ul>
+    <ul>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+        <li>Air Conditioning</li>
+    </ul>
 </div>
 
+<div class="similar">
+    <div class="houses"> 
+        <img src="assets/images/Rectangle-7.png" height="150" width="200">
+    </div>
+    <div class="houses">
+        <img src="assets/images/Rectangle-8.png" height="150" width="200">
+    </div>
+    <div class="houses">
+        <img src="assets/images/Rectangle-9.png" height="150" width="200">
+    </div>
+    <div class="houses">
+        <img src="assets/images/Rectangle-10.png" height="150" width="200">
+    </div>
+</div>
+</section>
 
     <!-- Footer-->
     <section class="footer">
@@ -123,6 +159,7 @@
                 <div <i class='bx bxl-instagram-alt' ></i></i></div>
             </div>
 
+            <div class="columns">
             <div class="column1">
                 <h5>Column Heading</h5>
                 <ul>
@@ -152,7 +189,7 @@
                     <li>Link goes here</li>
                 </ul>
             </div>
-
+            </div>
         </div>
     </section>
 </body>
